--- a/src/Components/Projects/styles.module.scss
+++ b/src/Components/Projects/styles.module.scss
@@ -58,5 +58,9 @@ li {
 }
 
 .videos {
-    min-height: 300px;
+    min-height: 40vh;
+
+    @include for-tablet-portrait-up {
+        min-height: 60vh;
+    }
 }
