--- a/src/Components/Nav/styles.module.css
+++ b/src/Components/Nav/styles.module.css
@@ -13,6 +13,7 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin-right: 50px;
+  margin-left: -6px;
   position: fixed;
 }
 
