--- a/src/Components/Home/styles.module.css
+++ b/src/Components/Home/styles.module.css
@@ -15,7 +15,7 @@
   font-size: clamp(1rem, 8vw, 4rem);
   padding: 0;
   margin: 0;
-  text-shadow: 6px 6px 0px #464646;
+  text-shadow: 6px 6px 0px rgb(70, 70, 70);
 }
 
 .softwareDeveloper {
@@ -27,72 +27,44 @@
 }
 
 .char {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
   display: inline-flex;
-  -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
-
 .char:hover {
-  -webkit-transform: scale(1.3);
-          transform: scale(1.3);
+  transform: scale(1.3);
 }
 
 .intro {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 0.5em;
   width: 50%;
-  -webkit-box-flex: 2;
-      -ms-flex-positive: 2;
-          flex-grow: 2;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-grow: 2;
+  flex-direction: column;
   height: 100vh;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  justify-content: center;
+  align-items: flex-start;
   font-family: "Orbitron";
   padding-left: 5%;
 }
-
 .intro .brackets {
   color: #ffffff;
   opacity: 0.2;
 }
-
 @media (max-width: 1200px) {
   .intro {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     padding: 0;
   }
 }
 
 .graphic {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   height: 100vh;
   width: 50%;
   overflow: hidden;
 }
-
 @media (max-width: 1200px) {
   .graphic {
     display: none;
@@ -106,27 +78,16 @@
 }
 
 .bottomLine {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  flex-grow: 1;
   width: 50%;
   border-right: solid 6px white;
 }
 
 .circle {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin: 0 auto;
   height: 15vw;
   width: 15vw;
@@ -135,8 +96,6 @@
 }
 
 .homePage {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 100%;
   padding: 0;
@@ -145,77 +104,47 @@
 }
 
 .enter {
+  opacity: 0;
+  transition: opacity 1s;
   position: absolute;
   bottom: 20vh;
   left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  background: #464646;
+  transform: translateX(-50%);
+  background: rgb(70, 70, 70);
   border-radius: 5px;
   padding: 0.3em 0.5em;
 }
-
 .enter:hover {
-  -webkit-animation: bounce 1s infinite;
-          animation: bounce 1s infinite;
+  animation: bounce 1s infinite;
+}
+
+.enterShow {
+  opacity: 1;
 }
 
 .link {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: .5em;
+  align-items: center;
+  gap: 0.5em;
   text-decoration: none;
   color: #ffffff;
-  padding: .5em .7em;
+  padding: 0.5em 0.7em;
 }
-
 .link:hover {
   opacity: 0.5;
 }
 
-@-webkit-keyframes bounce {
-  0% {
-    -webkit-transform: translate(-50%, 0%);
-            transform: translate(-50%, 0%);
-    -webkit-animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
-            animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
-  }
-  50% {
-    -webkit-transform: translate(-50%, 30%);
-            transform: translate(-50%, 30%);
-    -webkit-animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
-            animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
-  }
-  100% {
-    -webkit-transform: translate(-50%, 0%);
-            transform: translate(-50%, 0%);
-    -webkit-animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
-            animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
-  }
-}
-
 @keyframes bounce {
   0% {
-    -webkit-transform: translate(-50%, 0%);
-            transform: translate(-50%, 0%);
-    -webkit-animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
-            animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+    transform: translate(-50%, 0%);
+    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
   }
   50% {
-    -webkit-transform: translate(-50%, 30%);
-            transform: translate(-50%, 30%);
-    -webkit-animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
-            animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+    transform: translate(-50%, 30%);
+    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
   }
   100% {
-    -webkit-transform: translate(-50%, 0%);
-            transform: translate(-50%, 0%);
-    -webkit-animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
-            animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+    transform: translate(-50%, 0%);
+    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
   }
-}
-/*# sourceMappingURL=styles.module.css.map */
+}/*# sourceMappingURL=styles.module.css.map */
