--- a/src/Components/Nav/styles.module.css
+++ b/src/Components/Nav/styles.module.css
@@ -1,22 +1,14 @@
 .nonMobile {
   background-color: #5c5c5c;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 50px;
   height: 100vh;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  flex-direction: column;
+  justify-content: space-between;
   margin-right: 50px;
   margin-left: -6px;
   position: fixed;
 }
-
 @media (max-width: 599px) {
   .nonMobile {
     display: none;
@@ -25,15 +17,9 @@
 
 .mobile {
   display: none;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  flex-direction: column;
+  align-items: flex-end;
 }
-
 .mobile button {
   background: none;
   color: inherit;
@@ -41,15 +27,11 @@
   padding: 1em;
   cursor: pointer;
 }
-
 .mobile button:hover {
   opacity: 0.5;
 }
-
 @media (max-width: 599px) {
   .mobile {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
   }
 }
@@ -58,48 +40,30 @@
   color: white;
   padding: 0 1em;
 }
-
 .link:hover {
   opacity: 0.6;
 }
 
 .links {
   padding: 2em 0 0 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 2em;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   list-style-type: none;
 }
 
 .socials {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 0.5em;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   list-style-type: none;
-  padding-bottom: .5em;
+  padding-bottom: 0.5em;
 }
 
 .drawer {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  flex-direction: column;
+  align-items: flex-end;
   position: absolute;
   left: 0;
   right: 0;
@@ -108,41 +72,26 @@
   background-color: #ffffff;
   z-index: 1000;
 }
-
 .drawer button {
   color: black;
 }
 
 .mobileLinks {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  flex-grow: 1;
   width: 100%;
   gap: 1em;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .mobileLink {
   color: black;
   text-decoration: none;
   font-size: 1.5em;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
-
 .mobileLink:hover {
   opacity: 0.4;
-}
-/*# sourceMappingURL=styles.module.css.map */
+}/*# sourceMappingURL=styles.module.css.map */
