--- a/src/Components/RoutesWrapper/styles.module.css
+++ b/src/Components/RoutesWrapper/styles.module.css
@@ -3,10 +3,8 @@
   width: 100%;
   margin-left: 50px;
 }
-
 @media (max-width: 599px) {
   .motionDiv {
     margin-left: 0;
   }
-}
-/*# sourceMappingURL=styles.module.css.map */
+}/*# sourceMappingURL=styles.module.css.map */
