--- a/src/Components/Profile/styles.module.css
+++ b/src/Components/Profile/styles.module.css
@@ -219,8 +219,14 @@ form input:focus {
 
 .skillBarContainer {
   display: flex;
+  gap: 1em;
   flex-direction: column;
   flex-grow: 1;
+}
+
+.skillBarTitle {
+  display: flex;
+  gap: 0.5em;
 }
 
 .skillBarWrapper {
